[gd_scene load_steps=35 format=3 uid="uid://4y7cdl8s2bcs"]

[ext_resource type="Script" path="res://scenes/game_object/gareth_boss/gareth_boss.gd" id="1_fax8y"]
[ext_resource type="PackedScene" uid="uid://d0517nee0uimk" path="res://scenes/components/health_component.tscn" id="2_t1uqj"]
[ext_resource type="PackedScene" uid="uid://cv3f38dxuexue" path="res://scenes/components/velocity_component.tscn" id="3_d0pj5"]
[ext_resource type="PackedScene" uid="uid://cvqlyaw8b4llq" path="res://scenes/components/hit_flash_component.tscn" id="4_1v6x7"]
[ext_resource type="Shader" path="res://scenes/components/hit_flash_component.gdshader" id="5_b16rv"]
[ext_resource type="PackedScene" uid="uid://ek5cpdqdjubh" path="res://scenes/game_object/enemy_bullet/bullet_emitter_component.tscn" id="6_c03mo"]
[ext_resource type="PackedScene" uid="uid://y5nwa5dnoce1" path="res://scenes/components/death_component.tscn" id="8_ut6b6"]
[ext_resource type="PackedScene" uid="uid://ccr5s7rjx3lgp" path="res://scenes/components/hurtbox.tscn" id="9_tnep7"]
[ext_resource type="Texture2D" uid="uid://d37ac2ip6pmp4" path="res://scenes/game_object/gareth_boss/boss_gareth.png" id="9_upp3a"]
[ext_resource type="Texture2D" uid="uid://doesse6fung8e" path="res://assets/particles/circle_05.png" id="11_naswe"]
[ext_resource type="AudioStream" uid="uid://dkxjmcmld0kcq" path="res://assets/audio/apprentice_bullet.wav" id="12_i3o6t"]
[ext_resource type="PackedScene" uid="uid://om4k6y38eucx" path="res://scenes/components/enemy_sound_player_component.tscn" id="12_papsj"]
[ext_resource type="AudioStream" uid="uid://dxfb2kqvmvgmi" path="res://assets/audio/chad_dash.wav" id="13_8nxo5"]
[ext_resource type="AudioStream" uid="uid://mfbtdxolksqp" path="res://assets/audio/hourglass_pulse.wav" id="14_h23tg"]
[ext_resource type="AudioStream" uid="uid://bswie6ck6ra8q" path="res://assets/audio/teleport.mp3" id="15_lndx0"]
[ext_resource type="PackedScene" uid="uid://chy8gddo2r1rt" path="res://scenes/game_object/gareth_boss/final_boss_audio_player.tscn" id="16_7qdsi"]

[sub_resource type="Animation" id="Animation_7ddmb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:current_charge_speed")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [75]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visuals:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:collision_mask")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [9]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:collision_layer")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("HurtboxComponent/CollisionShape2D:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Visuals/Sprite2D:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_iae5f"]
resource_name = "bubble_storm_end"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VelocityComponent:max_speed")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 60]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("VelocityComponent:acceleration")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.7]
}

[sub_resource type="Animation" id="Animation_fud6r"]
resource_name = "bubble_storm_start"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VelocityComponent:max_speed")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [60, 0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("VelocityComponent:acceleration")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.7]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ChargeParticles:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"fire_bubble_storm"
}]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("FinalBossAudioPlayer")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"play_bubble_storm_audio"
}]
}

[sub_resource type="Animation" id="Animation_8jk5f"]
resource_name = "charge"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:current_charge_speed")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [75, 240, 140, 75]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:collision_mask")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [1, 9]
}

[sub_resource type="Animation" id="Animation_dnogq"]
resource_name = "jump"
length = 2.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5, 1, 1.5, 1.6, 2.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 2), Vector2(0, 0), Vector2(0, -7), Vector2(0, 0), Vector2(0, 2), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5, 1, 1.5, 1.6, 2.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 0.6), Vector2(1, 1.3), Vector2(1, 1), Vector2(1, 1), Vector2(1, 0.6), Vector2(1, 1)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1.6),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"activate_axe_traps"
}]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("LandingPlayer2D")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1.6),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0.0],
"method": &"play"
}]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("JumpPlayer2D")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0.0],
"method": &"play"
}]
}
tracks/5/type = "method"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("FinalBossAudioPlayer")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"play_trap_spring_audio"
}]
}

[sub_resource type="Animation" id="Animation_1rccg"]
resource_name = "teleport_end"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:collision_layer")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:collision_mask")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [9]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HurtboxComponent/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Visuals/Sprite2D:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.392157), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_38cip"]
resource_name = "teleport_start"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:collision_layer")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:collision_mask")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HurtboxComponent/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Visuals/Sprite2D:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.392157)]
}

[sub_resource type="Animation" id="Animation_q3ysr"]
resource_name = "walk"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-1, -1), Vector2(1, -1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Sprite2D:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, -0.0872665, 0.0872665]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7girf"]
_data = {
"RESET": SubResource("Animation_7ddmb"),
"bubble_storm_end": SubResource("Animation_iae5f"),
"bubble_storm_start": SubResource("Animation_fud6r"),
"charge": SubResource("Animation_8jk5f"),
"jump": SubResource("Animation_dnogq"),
"teleport_end": SubResource("Animation_1rccg"),
"teleport_start": SubResource("Animation_38cip"),
"walk": SubResource("Animation_q3ysr")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_x2sgo"]
resource_local_to_scene = true
shader = ExtResource("5_b16rv")
shader_parameter/lerp_percent = 0.0
shader_parameter/color = Color(1, 1, 1, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_k1je1"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_30vm8"]
blend_mode = 1

[sub_resource type="Gradient" id="Gradient_5sjk6"]
offsets = PackedFloat32Array(0, 0.430769, 0.747692, 1)
colors = PackedColorArray(0, 0.984314, 1, 0, 1, 0.06, 0.765, 1, 1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_6dt7c"]
gradient = SubResource("Gradient_5sjk6")

[sub_resource type="Curve" id="Curve_70kip"]
_data = [Vector2(0, 0), 0.0, 1.02201, 0, 0, Vector2(1, 1), 1.73659, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_os8o1"]
curve = SubResource("Curve_70kip")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_y7pu2"]
emission_shape = 6
emission_ring_axis = Vector3(0, 0, 1)
emission_ring_height = 1.0
emission_ring_radius = 40.0
emission_ring_inner_radius = 15.0
particle_flag_disable_z = true
spread = 180.0
gravity = Vector3(0, 0, 0)
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
radial_accel_min = -280.0
radial_accel_max = -280.0
angle_min = -180.0
angle_max = 180.0
scale_min = 0.1
scale_max = 0.4
scale_curve = SubResource("CurveTexture_os8o1")
color_ramp = SubResource("GradientTexture1D_6dt7c")

[sub_resource type="CircleShape2D" id="CircleShape2D_gcnki"]
radius = 6.5

[node name="GarethBoss" type="CharacterBody2D" groups=["enemy"]]
scale = Vector2(5, 5)
collision_layer = 8
collision_mask = 9
motion_mode = 1
script = ExtResource("1_fax8y")
bestiary_entry_id = "boss_gareth"
damage = 7
boss_name = "DARK LORD GARETH"
current_charge_speed = 75

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "walk"
libraries = {
"": SubResource("AnimationLibrary_7girf")
}

[node name="AttackTimer" type="Timer" parent="."]

[node name="HealthComponent" parent="." instance=ExtResource("2_t1uqj")]
max_health = 6000.0

[node name="VelocityComponent" parent="." instance=ExtResource("3_d0pj5")]
max_speed = 60
acceleration = 0.7

[node name="HitFlashComponent" parent="." node_paths=PackedStringArray("health_component", "sprite") instance=ExtResource("4_1v6x7")]
health_component = NodePath("../HealthComponent")
sprite = NodePath("../Visuals/Sprite2D")
hit_flash_material = SubResource("ShaderMaterial_x2sgo")

[node name="BulletEmitterComponent" parent="." instance=ExtResource("6_c03mo")]

[node name="DeathComponent" parent="." node_paths=PackedStringArray("health_component", "sprite") instance=ExtResource("8_ut6b6")]
health_component = NodePath("../HealthComponent")
sprite = NodePath("../Visuals/Sprite2D")
particle_scale = 5.0

[node name="HurtboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("9_tnep7")]
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
position = Vector2(0, -4)
shape = SubResource("CircleShape2D_k1je1")

[node name="Visuals" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Visuals"]
texture = ExtResource("9_upp3a")
offset = Vector2(0, -4)

[node name="ChargeParticles" type="GPUParticles2D" parent="."]
material = SubResource("CanvasItemMaterial_30vm8")
emitting = false
amount = 24
process_material = SubResource("ParticleProcessMaterial_y7pu2")
texture = ExtResource("11_naswe")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -3)
shape = SubResource("CircleShape2D_gcnki")

[node name="EnemySoundPlayerComponent" parent="." instance=ExtResource("12_papsj")]

[node name="KnifeShotPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_i3o6t")
volume_db = 7.0
max_distance = 500.0
max_polyphony = 25
bus = &"SFX"

[node name="LandingPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("14_h23tg")
volume_db = 7.0
pitch_scale = 0.7
max_distance = 500.0
max_polyphony = 25
bus = &"SFX"

[node name="JumpPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("13_8nxo5")
volume_db = 4.0
pitch_scale = 0.7
max_distance = 500.0
max_polyphony = 25
bus = &"SFX"

[node name="TeleportPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("15_lndx0")
volume_db = 4.0
pitch_scale = 0.7
max_distance = 500.0
max_polyphony = 25
bus = &"SFX"

[node name="DashPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("13_8nxo5")
pitch_scale = 0.8
max_distance = 500.0
max_polyphony = 25
bus = &"SFX"

[node name="FinalBossAudioPlayer" parent="." instance=ExtResource("16_7qdsi")]
